updade css hw 03-5

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    >
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -64,84 +68,84 @@
                 <ul class="item-list list">
                             <li class="item-portfolio"> 
                                 <a href="" class="link">
-                                <div class="portfolio-card">
                                     <img src="./images/interface.jpg" alt="interface" width="360" height="300">
-                                <h2 class="portfolio-list">Banking App Interface Concept</h2>
+                                    <div class="portfolio-card">
+                                    <h2 class="portfolio-list">Banking App Interface Concept</h2>
                                 <p class="portfolio-list-item">App</p>
                                 </div>    
-                            </a>   
+                                </a>   
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/payment.jpg" alt="payment" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-                                <h2 class="portfolio-list">Cashless Payment</h2>
+                                    <h2 class="portfolio-list">Cashless Payment</h2>
                                 <p class="portfolio-list-item">Marketing</p>
                                 </div>    
-                            </a> 
+                                </a> 
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/app.jpg" alt="application" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/app.jpg" alt="application" width="360" height="300">
-                                <h2 class="portfolio-list">Meditation App</h2>
+                                    <h2 class="portfolio-list">Meditation App</h2>
                                 <p class="portfolio-list-item">App</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/service.jpg" alt="taxi service" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/service.jpg" alt="taxi service" width="360" height="300">
-                                <h2 class="portfolio-list">Taxi Service</h2>
+                                    <h2 class="portfolio-list">Taxi Service</h2>
                                 <p class="portfolio-list-item">Marketing</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/illustration.jpg" alt="screen illustration" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/illustration.jpg" alt="screen illustration" width="360" height="300">
-                                <h2 class="portfolio-list">Screen Illustrations</h2>
+                                    <h2 class="portfolio-list">Screen Illustrations</h2>
                                 <p class="portfolio-list-item">Design</p>
                                 </div>    
-                            </a> 
+                                </a> 
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/courses.jpg" alt="online courses" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/courses.jpg" alt="online courses" width="360" height="300">
-                                <h2 class="portfolio-list">Online Courses</h2>
+                                    <h2 class="portfolio-list">Online Courses</h2>
                                 <p class="portfolio-list-item">Marketing</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/concept.jpg" alt="instagram stories concept" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/concept.jpg" alt="instagram stories concept" width="360" height="300">
-                                <h2 class="portfolio-list">Instagram Stories Concept</h2>
+                                    <h2 class="portfolio-list">Instagram Stories Concept</h2>
                                 <p class="portfolio-list-item">Design</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/food.jpg" alt="organic food" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/food.jpg" alt="organic food" width="360" height="300">
-                                <h2 class="portfolio-list">Organic Food</h2>
+                                    <h2 class="portfolio-list">Organic Food</h2>
                                 <p class="portfolio-list-item">Web Site</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link">
+                                <img src="./images/coffee.jpg" alt="a cap of coffee" width="360" height="300">
                                 <div class="portfolio-card">
-                                    <img src="./images/coffee.jpg" alt="a cap of coffee" width="360" height="300">
-                                <h2 class="portfolio-list">Fresh Coffee</h2>
+                                    <h2 class="portfolio-list">Fresh Coffee</h2>
                                 <p class="portfolio-list-item">Web Site</p>
                                 </div>    
-                            </a>
+                                </a>
                             </li>
                 </ul>
             </div>
