update css hw 03-6

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header class="header">
         <div class="container header-container">     
             <nav class="navigation">
-                <div class="header-btn-wrap">
+                <!-- <div class="header-btn-wrap"> -->
                     <a href="./index.html" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                </div>
+                <!-- </div> -->
                 <ul class="nav-menu list">
                     <li >
                         <a href="./index.html" class="menu-item link">Studio</a>
