--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- =================FOOTER=================== -->
     <footer class="footer">
         <div class="footer-container container">
-        <a href="./index.html" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
+        <a href="./index.html" class="logo-web-footer link">Web<span class="logo-studio-footer link">Studio</span></a>
         <p class="footer-tips">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>    
     </footer>
