--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
                 
                 <address class="header-adress">
-                    <ul class="list adress-wrap-list">
+                    <ul class="adress-wrap-list list">
                         <li class="adress-wrap">
                             <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
                         </li>
