update html hw 03

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,9 @@
                         <a href="" class="menu-item link">Contacts</a>
                     </li>
                 </ul>
-                
+            </nav>
                 <address class="header-adress">
-                    <ul class="list adress-wrap-list">
+                    <ul class="adress-wrap-list list">
                         <li class="adress-wrap">
                             <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
                         </li>
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                 </address>
-            </nav>
+            
         </div>
     </header>
     <!-- =================/HEADER=================== -->
