hope last fix hw 03

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Description -->
             <section class="description-section">
             <div class="container">
-                <h2 hidden class="title-section-two">features</h2>
+                <h2 class="visually-hidden">features</h2>
                 <ul class="features list">
                     <li class="features-item">
                         <!-- <div > -->
